PROYECTOS/PROYECTO2/k8s/grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
  namespace: so1-proyecto2
spec:
  selector:
    matchLabels:
      app: grpc
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
      - name: grpc-client
        image: keviingarciah/so1_grpc_client:v1.3
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.2"
            memory: "500Mi"
      - name: grpc-server
        image: keviingarciah/so1_grpc_server:v1.3
        ports:
        - containerPort: 3001
        resources:
          limits:
            cpu: "0.2"
            memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
  namespace: so1-proyecto2
spec:
  type: LoadBalancer
  ports:
  - name: grpc-client-port
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: grpc
