PROYECTOS/PROYECTO2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: so1-proyecto2
spec:
  ingressClassName: nginx
  rules:
  - host: 34.72.55.202.nip.io
    http:
      paths:
      - path: /grpc
        pathType: Prefix
        backend:
          service:
            name: grpc-service
            port:
              number: 3000
#      - path: /rust/
#        pathType: Prefix
#        backend:
#          service:
#            name: service-rust
#            port:
#              number: 8000
